Docker Work, jpetstore app build sample

--- a/EFK/elasticsearch.yaml
+++ b/EFK/elasticsearch.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: elasticsearch
         image: elastic/elasticsearch:6.4.0
+        imagePullPolicy: Always
         env:
         - name: discovery.type
           value: single-node
