--- a/EFK/fluentd.yaml
+++ b/EFK/fluentd.yaml
@@ -62,6 +62,7 @@ spec:
       containers:
       - name: fluentd
         image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
+        imagePullPolicy: Always
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
             value: "elasticsearch-svc"
